--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,12 @@ letter-spacing: 0.02em;
 color: #404bbf 
 }
 
+.nav-list{
+display: flex;
+gap: 40px;
+}
+
+
 /* Section 1 */
 
 .section-effective{
