--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ overflow: hidden;
 
 .header-container{
 display: flex;
+align-items: center;
 }
 
 .studio{
@@ -79,6 +80,7 @@ color: #404bbf
 .navigation{
 background-color: #FFFFFF;
 display: flex;
+margin-right: 322px;
 }
 
 .nav-logo{
@@ -153,6 +155,8 @@ font-style: normal;
 font-weight: 700;
 letter-spacing: 0.02em;
 line-height: 1.07;
+width: 496px;
+height: 120px;
 }
 
 .button-effective{
@@ -164,7 +168,12 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
-cursor: pointer;
+display: inline-flex;
+padding: 16px 32px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 4px;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .button-effective:hover,
@@ -174,8 +183,15 @@ background-color: #404BBF
 
 /* Sectuion 2 */
 
-.advan-conteiner{
+.advan-container{
 display: flex;
+}
+
+.advan-list{
+  display: flex;
+  width: 1158px;
+  align-items: stretch;
+  gap: 24px;
 }
 
 .advantages{
