--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,6 @@ color: #404bbf
 .navigation{
 background-color: #FFFFFF;
 display: flex;
-margin-right: 322px;
 }
 
 .nav-logo{
@@ -119,6 +118,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin-left: auto;
 }
 
 .adress-link{
@@ -170,12 +170,13 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
-display: inline-flex;
+display: inline;
 padding: 16px 32px;
 align-items: flex-start;
 gap: 10px;
 border-radius: 4px;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+margin-bottom: 188px;
 margin-left: auto;
 margin-right: auto;
 }
