--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,8 @@ font-weight: 700;
 letter-spacing: 0.02em;
 line-height: 1.07;
 width: 496px;
-height: 120px;
+padding-top: 188px;
+padding-bottom: 48px;
 margin-left: auto;
 margin-right: auto;
 }
@@ -174,13 +175,12 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
-display: inline;
+display: block;
 padding: 16px 32px;
 align-items: flex-start;
 gap: 10px;
 border-radius: 4px;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-margin-bottom: 188px;
 margin-left: auto;
 margin-right: auto;
 }
@@ -338,6 +338,8 @@ letter-spacing: 0.02em;
 
 .footer{
 background-color: #2E2F42;
+padding-top: 100px;
+padding-bottom: 100px;
 }
 
 .foot-logo{
@@ -375,6 +377,8 @@ text-transform: uppercase;
 
 .text-footer{
 color: #F4F4FD;
+width: 264px;
+margin-top: 18px;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
