--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ padding-bottom: 24px;
 
 .section-effective{
 background: #2E2F42;
+padding-top: 188px;
+padding-bottom: 188px;
 }
 
 .table-effective{
@@ -165,8 +167,7 @@ font-style: normal;
 font-weight: 700;
 letter-spacing: 0.02em;
 line-height: 1.07;
-width: 496px;
-padding-top: 188px;
+max-width: 496px;
 padding-bottom: 48px;
 margin-left: auto;
 margin-right: auto;
@@ -182,10 +183,13 @@ font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 display: block;
+min-width: 169px;
+height: 56px;
 padding: 16px 32px;
 align-items: flex-start;
 gap: 10px;
 border-radius: 4px;
+border: none;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 margin-left: auto;
 margin-right: auto;
