--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ padding-bottom: 24px;
 background: #2E2F42;
 padding-top: 188px;
 padding-bottom: 188px;
+margin-bottom: 8px;
 }
 
 .table-effective{
@@ -209,7 +210,7 @@ display: flex;
 .advan-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 3);
+width: ((100% - 72px) / 4);
 }
 
 .advan-list{
@@ -244,7 +245,7 @@ letter-spacing: 0.02em;
 background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 3);
+width: ((100% - 72px) / 4);
 }
 
 .team-img-padding{
@@ -310,7 +311,7 @@ flex-wrap: wrap;
 .portfolio-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 3);
+width: ((100% - 72px) / 6);
 }
 
 .portfolio-img-padding{
