--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
 width: ((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;
 }
 
 .team-img-padding{
@@ -368,6 +369,8 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+display: inline-block;
+margin-bottom: 16px;
 }
 
 .footer-web{
