--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,11 @@ letter-spacing: 0.02em;
 /* Sectio 4 */
 
 .portfolio-container{
+padding: 32px 16px;
+border: 1px solid #e7e9fc
+}
+
+.portfolio-list{
 display: flex;
 column-gap: 24px;
 row-gap: 48px;
