--- a/css/styles.css
+++ b/css/styles.css
@@ -303,11 +303,6 @@ letter-spacing: 0.02em;
 
 /* Sectio 4 */
 
-.portfolio-container{
-padding: 32px 16px;
-border: 1px solid #e7e9fc
-}
-
 .portfolio-list{
 display: flex;
 column-gap: 24px;
@@ -318,12 +313,12 @@ flex-wrap: wrap;
 .portfolio-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 3);
+width: ((100% - 48px) / 3);
 }
 
 .portfolio-img-padding{
-padding-top: 32px;
-padding-bottom: 32px;
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
 }
 
 .table-portfolio{
