--- a/css/styles.css
+++ b/css/styles.css
@@ -204,12 +204,12 @@ background-color: #404BBF
 
 .advan-container{
 display: flex;
+width: ((100% - 72px) / 4);
 }
 
 .advan-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
 }
 
 .advan-list{
@@ -319,6 +319,7 @@ width: ((100% - 48px) / 3);
 .portfolio-img-padding{
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
+border-top: none;
 }
 
 .table-portfolio{
