--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,10 @@ background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
 width: ((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;
+border-top-left-radius: 0px;
+border-top-right-radius: 0px;
+border-top-right-radius: 4px;
+border-bottom-left-radius:4px;
 }
 
 .team-img-padding{
