--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ display: flex;
 .advan-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
+width: calc((100% - 72px) / 4);
 }
 
 .advan-list{
@@ -245,7 +245,7 @@ letter-spacing: 0.02em;
 background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
+width: calc((100% - 72px) / 4);
 border-top-left-radius: 0px;
 border-top-right-radius: 0px;
 border-top-right-radius: 4px;
@@ -316,7 +316,7 @@ flex-wrap: wrap;
 .portfolio-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 48px) / 3);
+width: calc((100% - 48px) / 3);
 }
 
 .portfolio-img-padding{
