--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,6 @@ display: flex;
 .advan-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
 }
 
 .advan-list{
@@ -217,6 +216,10 @@ width: ((100% - 72px) / 4);
   width: 1158px;
   align-items: stretch;
   gap: 24px;
+}
+
+.advan-item{
+width: ((100% - 72px) / 4);
 }
 
 .advantages{
