--- a/css/styles.css
+++ b/css/styles.css
@@ -319,13 +319,16 @@ flex-wrap: wrap;
 .portfolio-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 48px) / 3);
 }
 
 .portfolio-img-padding{
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
 border-top: none;
+}
+
+.portfolio-item{
+width: ((100% - 48px) / 3);
 }
 
 .table-portfolio{
