--- a/css/styles.css
+++ b/css/styles.css
@@ -249,10 +249,6 @@ background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
 width: ((100% - 72px) / 4);
-border-top-left-radius: 0px;
-border-top-right-radius: 0px;
-border-top-right-radius: 4px;
-border-bottom-left-radius:4px;
 }
 
 .team-img-padding{
@@ -284,6 +280,7 @@ background-color: #FFFFFF;
 
 .worker-photo{
 background: url(<path-to-image>), lightgray -200px -7.128px / 251.515% 170.277% no-repeat;
+border-radius: 0px 0px 4px 4px;
 }
 
 .name-team{
