--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
 width: ((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;
 }
 
 .team-img-padding{
