--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,6 @@ background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
 width: ((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;
 }
 
 .team-img-padding{
@@ -306,7 +305,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
-/* Sectio 4 */
+/* Section 4 */
 
 .portfolio-list{
 display: flex;
