--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ display: flex;
 .advan-section{
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
+width: calc((100% - 72px) / 4);
 }
 
 .advan-list{
