--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ letter-spacing: 0.02em;
 background: #F4F4FD;
 padding-top: 120px;
 padding-bottom: 120px;
-width: ((100% - 72px) / 4);
+width: calc((100% - 72px) / 4);
 }
 
 .team-img-padding{
@@ -317,6 +317,7 @@ flex-wrap: wrap;
 .portfolio-section{
 padding-top: 120px;
 padding-bottom: 120px;
+width: calc((100% - 48px) / 3);
 }
 
 .portfolio-img-padding{
@@ -326,7 +327,7 @@ border-top: none;
 }
 
 .portfolio-item{
-width: ((100% - 48px) / 3);
+width: calc((100% - 48px) / 3);
 }
 
 .table-portfolio{
